--- a/client/components/styles/card.scss
+++ b/client/components/styles/card.scss
@@ -1,54 +1,5 @@
-* {box-sizing: border-box;}
-.product-item {
-  width: 300px;
-  margin: 0 auto;
-  padding: 10px 10px 5px 10px;
-  border: 1px solid #eee;
-  background: white;
-  font-family: "Open Sans";
-  overflow: hidden;
-  transition: .4s linear;
-}
-.card_image {transition: 1s ease-in-out;}
-.card_image:hover {transform: scale(1.1);}
-.card_image img {
-  display: block;
-  width: 100%;
-}
-.card_title {margin-top: 15px;}
-.card_title h3 {
-  font-weight: 700;
-  color: #39404B;
-  margin: 0;
-  text-transform: uppercase;
-  font-size: 14px;
-  line-height: 2;
-}
-.card_price {
-  color: #E34D38;
-  display: block;
-  margin-bottom: 12px;
-}
-.currency {
-  height: 14px;
-  line-height: 14px;
-  margin: 7px 0;
-}
-.actions {
-  border-top: 1px solid #eee;
-  padding-top: 4px;
-  font-size: 13px;
-  height: 30px;
-  line-height: 30px;
-}
-.actions:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.add-to-card, .card_product-amount {float: left;}
-.card-button {
- margin: 0 20px;
+.add-button {
+	margin: 0 20px;
   padding: 15px 34px;
 	overflow: hidden;
 	font-family: 'Montserrat Alternates', sans-serif;
@@ -63,8 +14,8 @@
   background: linear-gradient(90deg, #c600b2, #7619fd);
     cursor: pointer;
 }
-.card-button:before,
-.card-button:after {
+.add-button:before,
+.add-button:after {
     content: "";
 	position: absolute;
 	z-index: -1;
@@ -77,23 +28,10 @@
   transform: skewX(25deg);
 	transition: .5s ease;
 }
-.card-button:hover:before {
+.add-button:hover:before {
     left: -10%;
     transition: .3s ease;
 }
-.card-button:hover:after {
+.add-button:hover:after {
     left: -20%;
 }
-.add-to-card:hover .card-button, .wishlist:hover, .compare:hover {color: #E34D38;}
-.wishlist, .compare {
-  color: #8C877C;
-  padding-left: 20px;
-  transition: .4s linear;
-}
-.wishlist:after, .compare:after {
-  display: inline-block;
-  font-family: FontAwesome;
-  font-size: 13px;
-}
-.wishlist:after {content: "\f004";}
- .compare:after {content: "\f079";}
